@@ -15,6 +15,8 @@
     This allows initial lists in desktop layout to be balanced.
  9. With must be 25% more than height to be classified as landscape.
 10. Check landscape setting of now-playing 1 second after mounted.
+11. Fix toolbar layout when using mobile in landscape with song info showing on
+    now playing page.
 
 1.0.0
 -----
